Night Light broken in git master
Hi, on my laptop running Arch Linux with GNOME on Wayland I recently noticed Night Light functionality broke after updating to 3.34. This is with mutter-performance from AUR. I tried a patched redshift that uses gnomerr and that turned out to be broken too. There wasn't much more in the logs I could find, except this:
$ WAYLAND_DISPLAY=wayland-0 /usr/bin/redshift -m gnomerr -v
Location: *redacted*
Temperatures: 4000K at day, 4000K at night
Solar elevations: day above 3.0, night below -6.0
Brightness: 1.00:1.00
Gamma (Daytime): 1.000, 1.000, 1.000
Gamma (Night): 1.000, 1.000, 1.000
Gamma ramp size too small: 0
Failed to start adjustment method gnomerr.
Not being a developer (and with not much to go on besides visiual confirmation that Night Light didn't work) I started to build mutter from git, using different commits to try and find where it started to break. It seems the issue is in kms: Predict state changes when processing update. When I build from git master reverting that MR, things return to normal.
Feel free to ask if I can provide any additional info.