src/backends/native/meta-kms-crtc.c
@@ -143,13 +143,25 @@ meta_kms_crtc_update_state (MetaKmsCrtc *crtc)
   drmModeFreeCrtc (drm_crtc);
 }
 
+static void
+clear_gamma_state (MetaKmsCrtc *crtc)
+{
+  crtc->current_state.gamma.size = 0;
+  g_clear_pointer (&crtc->current_state.gamma.red, g_free);
+  g_clear_pointer (&crtc->current_state.gamma.green, g_free);
+  g_clear_pointer (&crtc->current_state.gamma.blue, g_free);
+}
+
 void
 meta_kms_crtc_predict_state (MetaKmsCrtc   *crtc,
                              MetaKmsUpdate *update)
 {
+  gboolean is_gamma_valid;
   GList *mode_sets;
   GList *crtc_gammas;
   GList *l;
+
+  is_gamma_valid = TRUE;
 
   mode_sets = meta_kms_update_get_mode_sets (update);
   for (l = mode_sets; l; l = l->next)
@@ -178,6 +190,8 @@ meta_kms_crtc_predict_state (MetaKmsCrtc   *crtc,
           crtc->current_state.drm_mode = (drmModeModeInfo) { 0 };
         }
 
+      is_gamma_valid = FALSE;
+
       break;
     }
 
@@ -196,7 +210,35 @@ meta_kms_crtc_predict_state (MetaKmsCrtc   *crtc,
         g_memdup (gamma->green, gamma->size * sizeof (uint16_t));
       crtc->current_state.gamma.blue =
         g_memdup (gamma->blue, gamma->size * sizeof (uint16_t));
+
+      is_gamma_valid = TRUE;
       break;
+    }
+
+  if (!is_gamma_valid)
+    {
+      if (crtc->current_state.is_drm_mode_valid)
+        {
+          MetaKmsImplDevice *impl_device;
+          drmModeCrtc *drm_crtc;
+
+          impl_device = meta_kms_device_get_impl_device (crtc->device);
+          drm_crtc = drmModeGetCrtc (meta_kms_impl_device_get_fd (impl_device),
+                                     crtc->id);
+          if (drm_crtc)
+            {
+              read_gamma_state (crtc, impl_device, drm_crtc);
+              drmModeFreeCrtc (drm_crtc);
+            }
+          else
+            {
+              clear_gamma_state (crtc);
+            }
+        }
+      else
+        {
+          clear_gamma_state (crtc);
+        }
     }
 }
 
@@ -220,9 +262,7 @@ meta_kms_crtc_finalize (GObject *object)
 {
   MetaKmsCrtc *crtc = META_KMS_CRTC (object);
 
-  g_clear_pointer (&crtc->current_state.gamma.red, g_free);
-  g_clear_pointer (&crtc->current_state.gamma.green, g_free);
-  g_clear_pointer (&crtc->current_state.gamma.blue, g_free);
+  clear_gamma_state (crtc);
 
   G_OBJECT_CLASS (meta_kms_crtc_parent_class)->finalize (object);
 }
